--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.12.2",
     "babel-preset-expo": "^54.0.1",
@@ -19,9 +19,10 @@
     "react-native-config": "^1.5.9",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~4.1.0",
-    "react-native-safe-area-context": "5.6.0",
+    "react-native-safe-area-context": "^5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-worklets": "^0.5.1"
+    "react-native-worklets": "^0.5.1",
+    "react-navigation": "^5.0.0"
   },
   "private": true
 }
